...
            SizedBox(height: 10),
            Align(
              alignment: Alignment.centerRight,
              child: SizedBox(
                width: MediaQuery.of(context).size.width / 2,
                child: AppButton(
                  text: 'Cancel',
                  onPressed: () {
                    ref.read(subscriptionProvider.notifier).cancel();
                    // Handle the button press
                  },
                  height: 48,
                  width: double.infinity,
...
